# EdgeOrchestratorAI

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: toolchain-aarch64.cmake
config/: default.toml
docs/: API.md  DESIGN.md  research_context.md
proto/: protocol.proto
src/app/: main.cpp
src/core/: concepts.hpp  config.cpp  config.hpp  logger.cpp  logger.hpp  result.hpp  types.hpp
src/executor/: memory_pool.cpp  memory_pool.hpp  task_runner.cpp  task_runner.hpp  thread_pool.cpp  thread_pool.hpp
src/network/: cluster_view.cpp  cluster_view.hpp  peer_discovery.cpp  peer_discovery.hpp  transport.cpp  transport.hpp
src/orchestrator/: offload_codec.cpp  orchestrator.hpp
src/resource_monitor/: linux_monitor.cpp  mock_monitor.cpp  monitor.hpp
src/scheduler/: cluster_view.cpp  greedy_policy.cpp  greedy_policy.hpp  optimizer_policy.cpp  optimizer_policy.hpp  scheduler.hpp  threshold_policy.cpp  threshold_policy.hpp
src/telemetry/: json_sink.cpp  json_sink.hpp  metrics_collector.cpp  metrics_collector.hpp
src/workload/: dag.cpp  dag.hpp  generator.cpp  generator.hpp
tests/: CMakeLists.txt
tests/benchmark/: bench_scheduler.cpp
tests/integration/: test_single_node.cpp
tests/unit/: test_config.cpp  test_dag.cpp  test_generator.cpp  test_memory_pool.cpp  test_monitor.cpp  test_network.cpp  test_orchestrator.cpp  test_result.cpp  test_scheduler.cpp  test_thread_pool.cpp  test_types.cpp
tools/: log_analyzer.py  workload_injector.py
